# lab_4_test

CalculatorProject/: CMakeLists.txt  main.cpp
CalculatorProject/tests/: calculator_test.cpp  integration_test.cpp  ui_test.cpp
